syntax = "proto3";

package iunite.club.api.navo.school;

import "github.com/micro/go-api/proto/api.proto";

service SchoolHandler {
  rpc SchoolList(go.api.Request) returns (go.api.Response) {}
  rpc SearchSchools(go.api.Request) returns (go.api.Response) {}
  rpc Create(go.api.Request) returns (go.api.Response) {}
}